--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "18.0.15",
     "@types/react-dom": "^18.0.8",
     "@types/react-router": "^5.1.19",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "msw": "^0.47.4"
   }
 }
